--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yassicorpmclauncher",
   "version": "1.0.0",
-  "productName": "YassiCorp MC Launcher",
+  "productName": "YassiCorp-MC-Launcher",
   "description": "Modded and Vanilla Minecraft Launcher",
   "author": "YassiGame",
   "license": "UNLICENSED",
